<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_compare"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/title_compare" />

    <item
        android:id="@+id/navigation_membership"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/title_membership" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_profile" />
</menu> 