<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wellnest.app.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.wellnest.app.ui.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_compare"
        android:name="com.wellnest.app.ui.CompareFragment"
        android:label="@string/title_compare"
        tools:layout="@layout/fragment_compare" />

    <fragment
        android:id="@+id/navigation_membership"
        android:name="com.wellnest.app.ui.MembershipFragment"
        android:label="@string/title_membership"
        tools:layout="@layout/fragment_membership" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.wellnest.app.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation> 